--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
    "version": "0.0.0",
    "type": "module",
    "scripts": {
-      "dev": "vite",
-      "build": "tsc -b && vite build",
+      "dev": "vite --mode staging --host",
+      "start": "vite --mode production --host",
+      "build-dev": "tsc && vite build --mode staging",
+      "build": "tsc -b && vite build  --mode production",
+      "preview": "vite preview --host",
       "lint": "eslint .",
-      "preview": "vite preview",
       "prettier-format": "npx prettier --write ."
    },
    "dependencies": {
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
-      "react-router-dom": "^7.1.2"
+      "react-router": "^7.1.2"
    },
    "devDependencies": {
       "@eslint/js": "^9.17.0",
