--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "build": "tsc -b && vite build  --mode production",
       "preview": "vite preview --host",
       "lint": "eslint .",
-      "prettier-format": "npx prettier --write ."
+      "prettier-format": "npx prettier --write .",
+      "prepare": "husky"
    },
    "dependencies": {
       "react": "^18.3.1",
@@ -18,6 +19,8 @@
       "react-router": "^7.1.2"
    },
    "devDependencies": {
+      "@commitlint/cli": "^19.6.1",
+      "@commitlint/config-conventional": "^19.6.0",
       "@eslint/js": "^9.17.0",
       "@types/react": "^18.3.18",
       "@types/react-dom": "^18.3.5",
@@ -27,6 +30,7 @@
       "eslint-plugin-react-hooks": "^5.0.0",
       "eslint-plugin-react-refresh": "^0.4.16",
       "globals": "^15.14.0",
+      "husky": "^9.1.7",
       "postcss": "^8.5.1",
       "prettier": "^3.4.2",
       "react-icons": "^5.4.0",
