--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
       "prepare": "husky"
    },
    "dependencies": {
+      "@reduxjs/toolkit": "^2.5.0",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
+      "react-redux": "^9.2.0",
       "react-router": "^7.1.2"
    },
    "devDependencies": {
       "@commitlint/cli": "^19.6.1",
       "@commitlint/config-conventional": "^19.6.0",
       "@eslint/js": "^9.17.0",
+      "@types/crypto-js": "^4.2.2",
       "@types/react": "^18.3.18",
       "@types/react-dom": "^18.3.5",
       "@vitejs/plugin-react-swc": "^3.5.0",
       "autoprefixer": "^10.4.20",
+      "crypto-js": "^4.2.0",
       "eslint": "^9.17.0",
       "eslint-plugin-react-hooks": "^5.0.0",
       "eslint-plugin-react-refresh": "^0.4.16",
@@ -37,6 +41,7 @@
       "tailwindcss": "^3.4.17",
       "typescript": "~5.6.2",
       "typescript-eslint": "^8.18.2",
-      "vite": "^6.0.5"
+      "vite": "^6.0.5",
+      "vite-tsconfig-paths": "^5.1.4"
    }
 }
