--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,3 @@
-VITE_API_URL=""   
-VITE_SECRET_KEY=''
+VITE_API_URL="https://fakestoreapi.com"
+   
+VITE_SECRET_KEY='3*U{m1q#t$>.I!/<0/^NXe"|6...gE'
