--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
    "devDependencies": {
       "@commitlint/cli": "^19.6.1",
       "@commitlint/config-conventional": "^19.6.0",
+      "@emotion/styled": "^11.14.0",
       "@eslint/js": "^9.17.0",
+      "@mui/base": "^5.0.0-beta.68",
+      "@mui/lab": "^6.0.0-beta.23",
+      "@mui/material": "^6.4.0",
+      "@mui/styled-engine": "^6.4.0",
       "@types/crypto-js": "^4.2.2",
       "@types/react": "^18.3.18",
       "@types/react-dom": "^18.3.5",
       "@vitejs/plugin-react-swc": "^3.5.0",
       "autoprefixer": "^10.4.20",
+      "axios": "^1.7.9",
       "crypto-js": "^4.2.0",
       "eslint": "^9.17.0",
       "eslint-plugin-react-hooks": "^5.0.0",
