--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "postcss": "^8.5.1",
       "prettier": "^3.4.2",
       "react-icons": "^5.4.0",
+      "react-loader-spinner": "^6.1.6",
       "tailwindcss": "^3.4.17",
       "typescript": "~5.6.2",
       "typescript-eslint": "^8.18.2",
